--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=eventostec
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventostec
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.flyway.baseline-on-migrate=true
+
+aws.region=us-east-1
+aws.bucket.name=tecevents-images
+
